Add business logic and updated exception structure